--- a/TodoList/res/values/strings.xml
+++ b/TodoList/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="add">ADD</string>
     <string name="itemhint">Enter new item..</string>
     <string name="title_activity_list_to_dos">List To Dos</string>
+    <string name="title_activity_select_multiple">SelectMultipleActivity</string>
 
 </resources>
